# trip-agent

./: .dockerignore  .env.example  .gitignore  DEPLOYMENT.md  Dockerfile  FLIGHT_API_SETUP.md  README.md  config.py  docker-compose.yml  main.py  pyproject.toml  requirements.txt  run_flight_agent.py  run_session.py  test_airline.py  test_serpapi.py  test_serpapi_dump.py
.cursor/rules/: README-updates.mdc
agents/: __init__.py  base_agent.py
agents/accommodation/: __init__.py  __main__.py  executor.py  server.py
agents/booking/: __init__.py  __main__.py  executor.py  server.py
agents/flight/: __main__.py  executor.py  server.py
agents/itinerary/: __init__.py  __main__.py  executor.py  server.py
agents/public_transit/: __init__.py  __main__.py  executor.py  server.py
agents/rental_car/: __init__.py  __main__.py  executor.py  server.py
agents/session/: __init__.py  executor.py  server.py
api/: __init__.py  plans.py
docs/: ATTRACTION_PIPELINE.md  GOOGLE_PLACES_API_GUIDE.md  HOTEL_SEARCH_API.md  IMAGES_AND_LICENSES.md  RENTAL_CAR_AGENT.md  TRAVELPAYOUTS_API_GUIDE.md
frontend/: airports.js  app.js  index.html  styles.css
mcp_servers/: __init__.py
mcp_servers/flight/: __init__.py  amadeus_clients.py  (+6 more)
shared/: __init__.py  attraction_filters.py  attraction_geo.py  attraction_scenic.py  directions_parking.py  fees_web_search.py  google_place_details.py  grand_circle_places.py  image_fallbacks.py  itinerary_route_schedule.py  loop_route_planner.py  place_images.py  restaurant_places.py  route_corridor_places.py  route_map_payload.py  tour_route_optimizer.py
(+22 files in other folders)
